fix mot so loi giao dien tai trang chu

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -13,16 +13,18 @@
   {{{_sections.css}}}
 </head>
 
-<body class="">
+<body>
 
   {{> nav}}
+  <div>
 
-  <div class="" style=" margin-top: 81px;">
-    {{{body}}}
-  </div>
-  <div class="">
+    <div class="" style=" margin-top: 81px;">
+      {{{body}}}
+    </div>
+
     {{> footer}}
   </div>
+
 
 
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
