--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -41,7 +41,7 @@
 
 
 
-<footer class="footer navbar-fixed-bottom navbar row align-items-end">
+<footer class="footer navbar-fixed-bottom navbar">
   <div class="row footer-area d-flex">
     <div class="col-md-4 ">
       <div class="single-footer-widget tp_widgets">
