--- a/views/vwAdmin/acceptuser.hbs
+++ b/views/vwAdmin/acceptuser.hbs
@@ -42,7 +42,7 @@
             <td>Dương Văn Khang</td>
             <td>khang@gmail.com</td>
             <td>Khóa học Ứng dụng SQL trong xử lý dữ liệu</td>
-            <td><a href="/admin/infouser/{{id}}">Xem chi tiết</a></td>
+            <td><a href="/admin/userconference">Xem chi tiết</a></td>
             <td>
               <div class="btn-group">
                 <button type="button" class="btn btn-sm btn-outline-success my-2">Phê duyệt</button>
@@ -55,7 +55,7 @@
             <td>Hoàng Ngọc Kim Thanh</td>
             <td>thanh@gmail.com</td>
             <td>Khóa học Tổ chức và quản lý dữ liệu báo cáo trong Excel</td>
-            <td><a href="/admin/infouser">Xem chi tiết</a></td>
+            <td><a href="/admin/userconference">Xem chi tiết</a></td>
             <td>
               <div class="btn-group">
                 <button type="button" class="btn btn-sm btn-outline-success my-2">Phê duyệt</button>
@@ -68,7 +68,7 @@
             <td>Trần Minh Thiện</td>
             <td>thien@gmail.com</td>
             <td>Khóa học Advanced Power Query</td>
-            <td><a href="/admin/infouser">Xem chi tiết</a></td>
+            <td><a href="/admin/userconference">Xem chi tiết</a></td>
             <td>
               <div class="btn-group">
                 <button type="button" class="btn btn-sm btn-outline-success my-2">Phê duyệt</button>
@@ -81,7 +81,7 @@
             <td>Nguyễn Thị Mỹ Tiên</td>
             <td>tien@gmail.com</td>
             <td>Khóa học Ứng dụng SQL trong xử lý dữ liệu</td>
-            <td><a href="/admin/infouser">Xem chi tiết</a></td>
+            <td><a href="/admin/userconference">Xem chi tiết</a></td>
             <td>
               <div class="btn-group">
                 <button type="button" class="btn btn-sm btn-outline-success my-2">Phê duyệt</button>
