--- a/views/vwAdmin/manageUser/userbanned.hbs
+++ b/views/vwAdmin/manageUser/userbanned.hbs
@@ -42,7 +42,7 @@
             <td>Dương Văn Khang</td>
             <td>dvkhang</td>
             <td>khang@gmail.com</td>
-            <td><a href="/admin/infouser/{{id}}">Xem chi tiết</a></td>
+            <td><a href="/admin/userconference">Xem chi tiết</a></td>
             <td>
                 <button type="button" class="btn btn-sm btn-outline-danger my-2">Bỏ chặn</button>
             </td>
@@ -52,7 +52,7 @@
             <td>Hoàng Ngọc Kim Thanh</td>
             <td>hnkthanh</td>
             <td>thanh@gmail.com</td>
-           <td><a href="/admin/infouser/{{id}}">Xem chi tiết</a></td>
+           <td><a href="/admin/userconference">Xem chi tiết</a></td>
             <td>
                 <button type="button" class="btn btn-sm btn-outline-danger my-2">Bỏ chặn</button>
             </td>
@@ -62,7 +62,7 @@
             <td>Trần Minh Thiện</td>
             <td>tmthien</td>
             <td>thien@gmail.com</td>
-             <td><a href="/admin/infouser/{{id}}">Xem chi tiết</a></td>
+             <td><a href="/admin/userconference">Xem chi tiết</a></td>
             <td>
                 <button type="button" class="btn btn-sm btn-outline-danger my-2">Bỏ chặn</button>
             </td>
@@ -72,7 +72,7 @@
             <td>Nguyễn Thị Mỹ Tiên</td>
             <td>ntmtien</td>
             <td>tien@gmail.com</td>
-           <td><a href="/admin/infouser/{{id}}">Xem chi tiết</a></td>
+           <td><a href="/admin/userconference">Xem chi tiết</a></td>
             <td>
                 <button type="button" class="btn btn-sm btn-outline-danger my-2">Bỏ chặn</button>
             </td>
