fix view infouser  va xoa file du thua

--- a/views/vwConference/infoconference.hbs
+++ b/views/vwConference/infoconference.hbs
@@ -36,7 +36,7 @@
               Đăng ký tham gia
             </strong>
           </button>
-
+{{!-- 
           {{!-- khi user đã bấm nút đăng kí nhưng chưa được admin duyệt
           <button type="button" class="btn btn-danger rounded-pill w-100 mb-3"
             style="height: 55px; background-color: #FF4444; font-size: larger;">
@@ -52,7 +52,7 @@
               <i class="fa fa-check" aria-hidden="true"></i>
               Đã đăng kí
             </strong>
-          </button> --}}
+          </button> --}} --}}
 
         </div>
 
