--- a/views/vwUser/info.hbs
+++ b/views/vwUser/info.hbs
@@ -172,9 +172,9 @@
 
 
 
-<div class="container">
+<div class="container pt-4">
 
-  <h4>Thông tin tài khoản</h4>
+  <h2 class="">Thông tin tài khoản</h2>
   <div style="margin-bottom: 50px">
 
     <div>
