--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -16,12 +16,8 @@
 <body>
 
   {{> nav}}
-  <div>
-
-    <div class="" style=" margin-top: 81px;">
-      {{{body}}}
-    </div>
-
+  <div style=" margin-top: 81px;">
+    {{{body}}}
     {{> footer}}
   </div>
 
