--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -15,7 +15,9 @@
 
 <body>
 
-  {{> nav}}
+  <div id="navNe">
+    {{> nav}}
+  </div>
   <div style=" margin-top: 81px;">
     {{{body}}}
     {{> footer}}
@@ -32,7 +34,10 @@
 
 
 
+
+
   {{{_sections.js}}}
+
 
 
 </body>
