fix sign up and nav

--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -88,7 +88,7 @@
                 </a>
               </li>`;
       }
-      else if (is_user == true) {
+      else if (is_user == "true") {
         if (isActive) {
           str = `<li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdown" role="button"
