--- a/views/partials/navadmin.hbs
+++ b/views/partials/navadmin.hbs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg shadow-lg navbar-dark fixed-top" style="background-color: #7a7a7a;">
+<nav class="navbar navbar-expand-lg shadow-lg navbar-dark fixed-top" style="background-color: #7a7a7a;" id="mainNav">
   <div class="container-fluid">
     <a class="navbar-brand" href="/">
       <img src="http://localhost:3000/public/images/logo.svg" class="card-img-top" alt="logo" title="logo"
@@ -37,13 +37,13 @@
               Quản lý hội nghị
             </a>
           </li>
-          <li class="nav-item" >
+          <li class="nav-item">
             <a class="dropdown-item" href="/admin/alluser">
               <img src="/public/images/iconqlu.png" style="margin-right: 10px">
               Quản lý User
             </a>
           </li>
-          <li class="nav-item" >
+          <li class="nav-item">
             <a class="dropdown-item" href="/admin/acceptuser">
               <img src="/public/images/icontghn.png" style="margin-right: 10px">
               Chấp nhận yêu cầu của User
