--- a/views/vwAuth/signup.hbs
+++ b/views/vwAuth/signup.hbs
@@ -111,6 +111,7 @@
           console.log('data: ', data);
           if (data.status == 1) {
             console.log(data.msg);
+            location.href = 'http://localhost:3000/login';
           }
         })
       });
