--- a/views/vwAuth/login.hbs
+++ b/views/vwAuth/login.hbs
@@ -49,12 +49,12 @@
                 <label class="form-check-label" for="exampleCheck1">Lưu lại trạng thái đăng nhập</label>
               </div>
 
-              <select class="form-select" aria-label="Default select example" id="selectMode">
+              <select class="mb-3 form-select" aria-label="Default select example" id="selectMode">
                 <option selected value="1">Người dùng</option>
                 <option value="2">Quản trị viên</option>
               </select>
 
-              <button class="btn btn-success rounded-pill w-100"
+              <button class=" btn btn-success rounded-pill w-100"
                 style="height: 55px; background-color: #5AAC44; font-size: larger;" type="button" onclick="login()">
                 Đăng nhập
               </button>
