fix lai cac duong dan

--- a/views/partials/navadmin.hbs
+++ b/views/partials/navadmin.hbs
@@ -89,7 +89,7 @@
             </a>
           </li>
           <li class="nav-item" style="border-bottom: 1px solid gray">
-            <a class="dropdown-item" href="/admin/alluser">
+            <a class="dropdown-item" href="/admin/manageuser">
               <img src="/public/images/iconqlu.png" style="margin-right: 10px">
               Quản lý User
             </a>
