--- a/views/vwAdmin/manageConference/editconference.hbs
+++ b/views/vwAdmin/manageConference/editconference.hbs
@@ -12,7 +12,8 @@
         </strong>
         <div class="row mb-3">
           <label for="validationCustom01" class="col-md-2 form-label">Tên hội nghị</label>
-          <input type="text" class="col form-control" id="nameConfer" required>
+          <input type="text" class="col form-control" id="nameConfer"
+            value="CỖ MÁY BÁN HÀNG CHO KHÁCH HÀNG GIÀU & SIÊU GIÀU" required>
           <div class="invalid-feedback">
             Không được bỏ trống!
           </div>
@@ -20,7 +21,8 @@
 
         <div class="row mb-3">
           <label for="validationCustom01" class="col-md-2 form-label">Mô tả ngắn gọn</label>
-          <input type="text" class="col form-control" id="decriptSort" required>
+          <input type="text" class="col form-control" id="decriptSort"
+            value="VÌ SAO BẠN Ở ĐÂY VÀ ĐANG ĐỌC NHỮNG DÒNG CHỮ NÀY?" required>
           <div class="invalid-feedback">
             Không được bỏ trống!
           </div>
@@ -28,7 +30,12 @@
 
         <div class="row mb-3">
           <label for="validationCustom01" class="col-md-2 form-label">Mô tả chi tiết</label>
-          <textarea class="col form-control" rows="5" type="text" id="decriptLong" required></textarea>
+          <input class="col form-control" rows="5" type="text" id="decriptLong"
+            value="Chúng tôi rất vui được gặp bạn bởi những ý tưởng chúng tôi sắp chia sẻ với bạn sẽ tạo ra sự khác biệt tích cực trong cuộc đời của bạn" "Bạn nhận ra doanh nghiệp của mình đang giảm tốc không phanh vì lượng khách hàng ngày một suy giảm, trong khi nguồn vốn ngày càng cạn kiệt.
+Bạn quá mệt mỏi vì phải đốt quá nhiều tiền cho quảng cáo mà không thu hút được đủ khách hàng chất lượng mua hàng.
+Ban đang khao khát sở hữu thật nhiều những khách hàng có năng lực chi trả cao cho những sản phẩm& dịch vụ mà bạn đang kinh doanh
+Bạn đang đi tìm lời giải cho cỗ máy doanh nghiệp khi nguồn lực nội tại vừa thiếu & yếu, không đủ sức bứt phá trước thị trường biến động khôn lường."
+            required></input>
           <div class="invalid-feedback">
             Không được bỏ trống!
           </div>
@@ -52,7 +59,7 @@
 
         <div class="row mb-3">
           <label for="validationCustom01" class="col-md-2 form-label">Địa điểm tổ chức</label>
-          <input type="text" class="col form-control" id="location" required>
+          <input type="text" class="col form-control" id="location" value="" required>
           <div class="invalid-feedback">
             Không được bỏ trống!
           </div>
@@ -60,7 +67,7 @@
 
         <div class="row mb-3">
           <label for="validationCustom01" class="col-md-2 form-label">Tổng số người tham dự</label>
-          <input type="text" class="col form-control" id="sl" required>
+          <input type="text" class="col form-control" id="sl" value="100" required>
           <div class="invalid-feedback">
             Không được bỏ trống!
           </div>
