--- a/views/vwUser/registeredconference.hbs
+++ b/views/vwUser/registeredconference.hbs
@@ -3,6 +3,9 @@
 {{/section}}
 
 {{#section 'js'}}
+<script src="../public/javascripts/ajax/conferenceAjax.js"></script>
+
+
 <script>
   console.log('get here')
 
@@ -10,6 +13,7 @@
     $(_ => {
       let idO = localStorage.getItem(`con${id}`);
       localStorage.setItem('conferenceCurrent', idO);
+      location.href = 'http://localhost:3000/infoconference';
     })
   }
 
@@ -40,7 +44,7 @@
                 <p class="card-text">${e.name}.</p>
                 <div class="">      
                   <div class="d-flex justify-content-center">
-                    <button type="button" class="btn btn-sm btn-outline-primary my-2" href="/user/registeredconference" onclick="viewInfoConference(${i})">Xem thông tin chi tiết hội nghị</button>                
+                    <button type="button" class="btn btn-sm btn-outline-primary my-2" onclick="viewInfoConference(${i})">Xem thông tin chi tiết hội nghị</button>                
                   </div>
                   <small class="text-muted"></small>
                 </div>
